--- a/culturalconnections.html
+++ b/culturalconnections.html
@@ -119,6 +119,7 @@
 
     <div class="main-content">
         <div class="greeting">
+            <img src="Foto_ID.png" alt="Fausto Astudillo">
             <h2>Hello, I'm Fausto Astudillo. Welcome to my cultural connections page!</h2>
         </div>
 
